Gradle import with JDK9+ issues IDEA-202975, IDEA-203429, IDEA-206037